# ch9329

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check-formatting.yml  python-package.yml
ch9329/: ascii_to_ch9329.py  config.py  exceptions.py  hid.py  keyboard.py  mouse.py  serial_com.py  utils.py
ch9329/tools/: lsch9329.py
tests/: test_config.py  test_keyboard.py
